--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -20,6 +20,7 @@ exec-once = waybar
 exec-once = mako
 exec-once = hyprpaper
 exec-once = blueman-applet
+exec-once = cliphist daemon
 
 # Автозапуск приложений на конкретные workspace
 exec-once = [workspace 1 silent] firefox
@@ -27,6 +28,7 @@ exec-once = [workspace 2 silent] kitty neofetch
 exec-once = [workspace 3 silent] rocketchat-desktop
 exec-once = [workspace 3 silent] telegram
 exec-once = [workspace 3 silent] tor-browser
+exec-once = [workspace 10 silent] kitty
 
 
 
@@ -138,7 +140,8 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, exec, cliphist-bar -toggle
+bind = $mainMod, K, togglefloating,
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
