--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -80,16 +80,23 @@ decoration {
 animations {
     enabled = yes
     
+    # Кривые Безье для плавности
     bezier = easeOutQuint, 0.23, 1, 0.32, 1
     bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
+    bezier = smoothWorkspace, 0.16, 1, 0.3, 1  # ← новая кривая для workspace
     
+    # Окна
     animation = windows, 1, 4, easeOutQuint
     animation = windowsIn, 1, 4, easeOutQuint, popin 87%
     animation = windowsOut, 1, 2, easeInOutCubic, popin 87%
     animation = fadeIn, 1, 3, easeOutQuint
     animation = fadeOut, 1, 3, easeOutQuint
-    animation = workspaces, 1, 3, easeOutQuint, fade
     animation = border, 1, 5, easeOutQuint
+    
+    # Workspace переходы (УВЕЛИЧЕННАЯ ДЛИТЕЛЬНОСТЬ)
+    animation = workspaces, 1, 6, smoothWorkspace, slide
+    animation = workspacesIn, 1, 6, smoothWorkspace, slidefade 20%
+    animation = workspacesOut, 1, 6, smoothWorkspace, slidefade 20%
 }
 
 dwindle {
