--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -80,24 +80,26 @@ decoration {
 animations {
     enabled = yes
     
-    # Кривые Безье для плавности
     bezier = easeOutQuint, 0.23, 1, 0.32, 1
     bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
-    bezier = smoothWorkspace, 0.16, 1, 0.3, 1  # ← новая кривая для workspace
+    bezier = smoothWorkspace, 0.16, 1, 0.3, 1
+    bezier = smoothOut, 0.36, 0, 0.66, -0.56
+    bezier = smoothClose, 0.4, 0, 0.2, 1
     
-    # Окна
-    animation = windows, 1, 4, easeOutQuint
-    animation = windowsIn, 1, 4, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 2, easeInOutCubic, popin 87%
-    animation = fadeIn, 1, 3, easeOutQuint
-    animation = fadeOut, 1, 3, easeOutQuint
-    animation = border, 1, 5, easeOutQuint
+    animation = windows, 1, 4, smoothWorkspace
+    animation = windowsIn, 1, 4, smoothWorkspace, popin 87%
+    animation = windowsOut, 1, 6, smoothClose, popin 92%
+    animation = fadeOut, 1, 6, smoothClose
+    animation = border, 1, 4, smoothWorkspace
     
-    # Workspace переходы (УВЕЛИЧЕННАЯ ДЛИТЕЛЬНОСТЬ)
+    # Анимации workspace
     animation = workspaces, 1, 6, smoothWorkspace, slide
     animation = workspacesIn, 1, 6, smoothWorkspace, slidefade 20%
     animation = workspacesOut, 1, 6, smoothWorkspace, slidefade 20%
+    animation = specialWorkspace, 1, 5, smoothWorkspace, slidevert
 }
+
+
 
 dwindle {
     pseudotile = true
