wallpaper-rs xd

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -18,17 +18,19 @@ $menu = wofi --show drun
 #################
 exec-once = waybar
 exec-once = mako
-exec-once = hyprpaper
+# exec-once = hyprpaper
+exec-once = /home/wave/nix-config/scripts/wallengine-rs/target/release/wallengine-rs
 exec-once = blueman-applet
-exec-once = cliphist daemon
+exec-once = wl-paste --watch cliphist store
 
 # Автозапуск приложений на конкретные workspace
 exec-once = [workspace 1 silent] firefox
-exec-once = [workspace 2 silent] kitty neofetch
+exec-once = [workspace 2 silent] kitty
 exec-once = [workspace 3 silent] rocketchat-desktop
 exec-once = [workspace 3 silent] telegram
 exec-once = [workspace 3 silent] tor-browser
 exec-once = [workspace 10 silent] kitty
+exec-once = [workspace 10 silent] keepassxc
 
 
 
@@ -149,7 +151,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, V, exec, cliphist-bar -toggle
+bind = $mainMod, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy
 bind = $mainMod, K, togglefloating,
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, P, pseudo,
@@ -225,6 +227,9 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# change random wallpaper
+bind = $mainMod SHIFT, W, exec, /home/wave/nix-config/scripts/wallengine-rs/target/release/wallengine-rs
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
