--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -1,3 +1,16 @@
+map ctrl+shift+s scroll_to_prompt -1
+map ctrl+shift+e scroll_to_prompt 1
+
+# Vim-like navigation
+map ctrl+shift+k scroll_line_up
+map ctrl+shift+j scroll_line_down
+map ctrl+shift+u scroll_page_up
+map ctrl+shift+d scroll_page_down
+
+# Копирование выделенного
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
+
 # Шрифт
 font_family      Fira Code
 bold_font        auto
