--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -22,9 +22,9 @@ exec-once = wl-paste --watch cliphist store
 # Автозапуск приложений на конкретные workspace
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] kitty
-exec-once = [workspace 3 silent] rocketchat-desktop
-exec-once = [workspace 3 silent] telegram
-exec-once = [workspace 3 silent] tor-browser
+exec-once = [workspace 4 silent] rocketchat-desktop
+exec-once = [workspace 3 silent] Telegram
+exec-once = [workspace 4 silent] tor-browser
 exec-once = [workspace 10 silent] kitty
 exec-once = [workspace 10 silent] keepassxc
 
