--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -1,7 +1,9 @@
+# ~/.config/kitty/kitty.conf
+
+# Vim-like navigation
 map ctrl+shift+s scroll_to_prompt -1
 map ctrl+shift+e scroll_to_prompt 1
 
-# Vim-like navigation
 map ctrl+shift+k scroll_line_up
 map ctrl+shift+j scroll_line_down
 map ctrl+shift+u scroll_page_up
@@ -18,17 +20,18 @@ italic_font      auto
 bold_italic_font auto
 font_size 12.0
 
-# Прозрачность
-background_opacity 0.85
+# Прозрачность для эффекта "глубины"
+background_opacity 0.92
 
-# Synthwave цвета (Dracula тема)
+# Synthwave цвета (адаптированная Dracula)
 foreground            #f8f8f2
-background            #282a36
+background            #2a243d
 selection_foreground  #ffffff
 selection_background  #44475a
 
-# Курсор
-cursor                #f8f8f2
+# Курсор — неоново-розовый (ключевой цвет SynthWave)
+cursor                #f1fa8c
+cursor_text_color     #2a243d
 
 # Чёрный
 color0   #21222c
@@ -43,14 +46,14 @@ color2   #50fa7b
 color10  #69ff94
 
 # Жёлтый
-color3   #f1fa8c
+color3   #ffbe0b
 color11  #ffffa5
 
-# Синий
+# Синий (фиолетовый)
 color4   #bd93f9
 color12  #d6acff
 
-# Пурпурный
+# Пурпурный (ярко-розовый)
 color5   #ff79c6
 color13  #ff92df
 
@@ -65,3 +68,8 @@ color15  #ffffff
 # Окна
 window_padding_width 10
 
+# Убираем заголовок окна для минимализма
+hide_window_decorations yes
+
+# Убираем табы (если не используете)
+tab_bar_style hidden
