night light dolphin checked

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -18,6 +18,7 @@ exec-once = mako
 exec-once = hyprpaper
 exec-once = blueman-applet
 exec-once = wl-paste --watch cliphist store
+exec-once = hyprsunset -t 3700
 
 # Автозапуск приложений на конкретные workspace
 exec-once = [workspace 1 silent] firefox
@@ -147,6 +148,8 @@ bind = $mainMod, K, togglefloating,
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
+bind = $mainMod, D, exec, dolphin
+bind = $mainMod, N, exec, ~/nix-config/scripts/toggle-nightlight.sh
 
 # Скриншоты
 bind = SHIFT, Print, exec, grim -g "$(slurp)" - | wl-copy  # выделить и скопировать
