zen and fixing wall on start

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -19,7 +19,7 @@ exec-once = hyprpaper
 exec-once = blueman-applet
 exec-once = wl-paste --watch cliphist store
 exec-once = hyprsunset -t 3700
-exec-once = /home/wave/nix-config/scripts/wallengine-rs/target/release/wallengine-rs
+exec-once = sh -c 'sleep 2 && /home/wave/nix-config/scripts/wallengine-rs/target/release/wallengine-rs'
 
 # Автозапуск приложений на конкретные workspace
 exec-once = [workspace 1 silent] firefox
