--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -145,24 +145,24 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, B, exec, firefox
 bind = $mainMod, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy
-bind = $mainMod, K, togglefloating,
-bind = $mainMod, F, fullscreen, 0
-bind = $mainMod, P, pseudo,
-bind = $mainMod, J, togglesplit,
+bind = $mainMod, F, togglefloating,
+bind = $mainMod, SPACE, fullscreen, 0
+bind = $mainMod, I, togglesplit,
+bind = $mainMod, I, togglesplit,
 bind = $mainMod, D, exec, dolphin
 bind = $mainMod, N, exec, ~/nix-config/scripts/toggle-nightlight.sh
 
 # Скриншоты
-bind = SHIFT, Print, exec, grim -g "$(slurp)" - | wl-copy  # выделить и скопировать
-bind = , Print, exec, grim ~/Pictures/Screenshots/$(date +%Y%m%d_%H%M%S).png && notify-send "Screenshot saved"  # весь экран
+bind = $mainMod, P, exec, grim ~/Pictures/Screenshots/$(date +%Y%m%d_%H%M%S).png && notify-send "Screenshot saved"
+bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" - | wl-copy
 
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, X, exec, hyprlock
 
 # Навигация
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 bind = $mainMod SHIFT, H, swapwindow, l
 bind = $mainMod SHIFT, L, swapwindow, r
@@ -209,6 +209,15 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Перемещение/ресайз мышью
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+
+# --- ГРОМКОСТЬ И ЯРКОСТЬ ("УДОБНЫЙ" СЛОЙ) ---
+# Громкость: meta + ,/.
+binde = $mainMod, comma, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+binde = $mainMod, period, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+# Яркость: meta + </>
+binde = $mainMod SHIFT, comma, exec, brightnessctl set 5%-
+binde = $mainMod SHIFT, period, exec, brightnessctl set 5%+
 
 # Медиа клавиши
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
